# dicer

./: .bazelrc  .gitignore  MODULE.bazel  README.md
caching/util/: BUILD.bazel  README.md
caching/util/javaapi/: BUILD.bazel
caching/util/src/: BuildInfo.scala  CachingErrorCode.scala  ConfigScope.scala  ContextAwareUtil.scala  EtcdClient.scala  EtcdKeyValueMapper.scala  PrefixLogger.scala  SafeConfigUtil.scala  SequentialExecutionContext.scala  SequentialExecutionContextPool.scala  ServerConf.scala  StateMachineDriver.scala  TokenBucket.scala  WatchCell.scala  WatchValueCellPollAdapter.scala  WhereAmIHelper.scala
caching/util/test/: ByteSizeSuite.scala  CachingLatencyHistogramSuite.scala  ConfigScopeSuite.scala  EtcdClientSuite.scala  FakeProxy.scala  FakeS2SProxyMetadataHandler.scala  FakeSequentialExecutionContextPool.scala  FakeSequentialExecutionContextSuite.scala  MetricUtils.scala  MetricUtilsSuite.scala  PipelineSuite.scala  PrefixLoggerSuite.scala  SequentialExecutionContextSuite.scala  StateMachineDriverSuite.scala  TestUtils.scala  TokenBucketSuite.scala  WatchCellSuite.scala  WatchValueCellPollAdapterSuite.scala  WhereAmIHelperSuite.scala
dicer/: BUILD.bazel
dicer/assigner/: BUILD.bazel
dicer/assigner/advanced_config/: README.md
dicer/assigner/algorithm/: BUILD.bazel
dicer/assigner/config/: BUILD.bazel
dicer/assigner/proto/: BUILD.bazel  assigner_dpage.proto  preferred_assigner.proto
dicer/assigner/src/: Assigner.scala  AssignerDPage.scala  AssignerMain.scala  AssignerProtoLogger.scala  AssignerSlicez.scala  AssignmentGenerator.scala  AssignmentGeneratorDriver.scala  AssignmentStats.scala  ConsistentHashingPreferredAssignerStateMachine.scala  DicerTeeEventEmitter.scala  DicerTeeEventEmitterImpl.scala  EtcdPreferredAssignerDriver.scala  EtcdPreferredAssignerStore.scala  HealthWatcher.scala  KeyOfDeathDetector.scala  KubernetesMembershipChecker.scala  LoadWatcher.scala  PreferredAssignerMetrics.scala  PreferredAssignerSelector.scala  PreferredAssignerServerHelper.scala  PreferredAssignerValue.scala  ResourceWatcher.scala  SubscriberManager.scala  TargetMetrics.scala  TargetMigrationRouter.scala
dicer/assigner/test/: AssignerGeneratorGCSuite.scala  AssignerHeartbeatSuite.scala  AssignerMainSuite.scala  AssignerRpcTestHelper.scala  AssignerSlicezSuite.scala  AssignerSuite.scala  AssignmentGeneratorSuite.scala  AssignmentStatsSuite.scala  CommonStoreSuiteBase.scala  ConsistentHashingPreferredAssignerStateMachineSuite.scala  EtcdAssignerSuite.scala  EtcdPreferredAssignerDriverSuite.scala  EtcdPreferredAssignerIntegrationSuite.scala  EtcdPreferredAssignerStoreSuite.scala  EtcdStoreSuite.scala  HealthWatcherSuite.scala  InterposingEtcdPreferredAssignerDriver.scala  KeyOfDeathDetectorSuite.scala  MigrationTestAssignment.scala  MultipleAssignerInstancesSuite.scala  PreferredAssignerSelectorSuite.scala  PreferredAssignerTestHelper.scala  PreferredAssignerValueSuite.scala  ResourceVersionSuite.scala  SubscriberManagerSuite.scala  TargetMetricsSuite.scala  TargetMetricsUtils.scala  TargetMigrationRouterSuite.scala  TestableDicerAssignerConf.scala
dicer/client/: BUILD.bazel
dicer/client/feature-rollouts/: BUILD.bazel
dicer/client/javaapi/: BUILD.bazel
dicer/client/proto/: BUILD.bazel  client_dpage.proto
dicer/client/src/: AssignmentSyncStateMachine.scala  ClerkImpl.scala  ClerkMetrics.scala  ClientDPage.scala  ClientMetrics.scala  ClientSlicez.scala  DicerClientProtoLogger.scala  DicerClientProtoLoggerConf.scala  InternalClientConfig.scala  ResourceRouter.scala  SliceLookup.scala  SliceLookupCache.scala  SliceLookupConfig.scala  SliceletImpl.scala  SliceletLoadAccumulator.scala  WatchStubHelper.scala  WatchStubManager.scala
dicer/client/test/: AssignmentSyncStateMachineSuite.scala  ClerkImplSuite.scala  ClerkMetricsSuite.scala  ClientSlicezSuite.scala  ClientSlicezTestHelper.scala  InternalClientConfigSuite.scala  ScalaSliceLookupSuite.scala  ScalaSliceLookupSuiteBase.scala  SliceLookupCacheSuite.scala  SliceLookupDriver.scala  SliceLookupSuiteBase.scala  SliceletLoadAccumulatorSuite.scala  TestClientUtils.scala  TestableDicerClientProtoLoggerConf.scala  TopKeysSuite.scala  WatchAddressHelperSuite.scala
dicer/common/: BUILD.bazel
dicer/common/proto/: BUILD.bazel  common.proto  dpage.proto
dicer/common/src/: Assignment.scala  AssignmentFormatter.scala  ClientRequest.scala  CommonSlicez.scala  DPageViewHelpers.scala  DiffAssignment.scala  InternalClientConf.scala  ProposedAssignment.scala  SliceAssignment.scala  SliceHelper.scala  SliceKeyHelper.scala  SlicezKeyTracker.scala  SubscriberHandler.scala  SubsliceAnnotation.scala  SubsliceAnnotationsMap.scala  TargetHelper.scala  TargetName.scala  TargetUnmarshaller.scala  Transfer.scala  WatchServerConf.scala  WatchServerHelper.scala
dicer/common/test/: AppTargetSuite.scala  AssignmentFormatterSuite.scala  AssignmentSuite.scala  ClientRequestSuite.scala  DPageViewHelpersSuite.scala  DiffAssignmentSuite.scala  GossipSuite.scala  InternalDicerTestEnvFakeClockSuite.scala  InternalDicerTestEnvironment.scala  InternalDicerTestEnvironmentSuite.scala  ProposedAssignmentSuite.scala  ScalaSubscriberHandlerSuite.scala  SliceAssignmentSuite.scala  SliceKeySuite.scala  SliceSuite.scala  SlicezSuite.scala  SubscriberHandlerDriver.scala  SubscriberHandlerMetricUtils.scala  SubscriberHandlerSuite.scala  SubscriberHandlerSuiteBase.scala  SubsliceAnnotationSuite.scala  SubsliceAnnotationsMapSuite.scala  TargetSuite.scala  TargetUnmarshallerSuite.scala  TestAssigner.scala  TestSliceUtils.scala
dicer/demo/proto/: demo.proto
dicer/friend/: BUILD.bazel
dicer/friend/proto/: BUILD.bazel  friend.proto
dicer/friend/src/: SliceAccessor.scala  SliceletAccessor.scala  Squid.scala
dicer/friend/test/: BUILD.bazel  MutableSliceMapSuite.scala  SliceAccessorSuite.scala  SliceMapSuite.scala  SliceletAccessorSuite.scala  (+1 more)
dicer/resources/: BUILD.bazel  log4j2.xml
wrappers/conf/: BUILD.bazel
wrappers/instrumentation/: BUILD.bazel
wrappers/java/: BUILD.bazel
wrappers/rpc/: BUILD.bazel
wrappers/util/: BUILD.bazel
(+102 files in other folders)
