# MODULE.bazel defines the external dependencies used by bazel.

# ========================================
# Core Build Rules
# ========================================

bazel_dep(name = "rules_scala", version = "7.0.0")
bazel_dep(name = "rules_proto", version = "7.0.2")

# Use precompiled protoc rather than building it from source, which saves about 30 seconds on a
# new build. See
# https://github.com/bazel-contrib/rules_scala/tree/v7.0.0?tab=readme-ov-file#using-a-precompiled-protocol-compiler
# for more details.
register_toolchains(
    "@rules_scala_protoc_toolchains//...:all",
    dev_dependency = True,
)

scala_protoc = use_extension(
    "@rules_scala//scala/extensions:protoc.bzl",
    "scala_protoc",
    dev_dependency = True,
)
use_repo(scala_protoc, "rules_scala_protoc_toolchains")

# Required for protocol compiler toolchainization. Pinned to 30.2 until resolution of
# protocolbuffers/protobuf#19679 (missing Python toolchain registration in earlier versions).
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    patches = ["//bazel:protobuf.patch"],
    version = "30.2",
)

# ========================================
# Scala Configuration
# ========================================

# Configure Scala version (2.12.20) and toolchain parameters.
# Scala 2.12 is used for compatibility with internal Databricks systems.
scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.12.20")

# Configure Scala dependencies extension for toolchains and libraries.
scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)

# Configure Scala proto generation with gRPC support and flat package structure.
scala_deps.scala_proto(
    default_gen_opts = [
        "grpc",
        "flat_package",
    ],
)

# Reexport proto and gRPC-related dependencies from rules_scala.
use_repo(
    scala_deps,
    "com_google_protobuf_protobuf_java",
    "scala_proto_rules_grpc_api",
    "scala_proto_rules_grpc_netty",
    "scala_proto_rules_grpc_stub",
    "scala_proto_rules_netty_handler",
    "scala_proto_rules_scalapb_runtime",
)

# Load default Scala toolchain (compiler and standard libraries).
scala_deps.scala()

# Enable ScalaTest toolchain for unit testing.
scala_deps.scalatest()

# Reexport ScalaTest dependencies for direct use in BUILD files.
use_repo(
    scala_deps,
    "io_bazel_rules_scala_scalactic",
    "io_bazel_rules_scala_scalatest",
    "io_bazel_rules_scala_scalatest_compatible",
    "io_bazel_rules_scala_scalatest_core",
    "io_bazel_rules_scala_scalatest_funsuite",
    "io_bazel_rules_scala_scalatest_shouldmatchers",
)

# Declare the etcd extension for etcd binary distribution.
etcd_extension = use_extension("//bazel:etcd.bzl", "etcd_extension")
use_repo(etcd_extension, "etcd_release")

# ========================================
# Maven Dependencies
# ========================================

bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Core utilities
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.errorprone:error_prone_annotations:2.5.1",
        "com.google.guava:guava:32.0.1-jre",
        "com.typesafe:config:1.2.1",
        "commons-io:commons-io:2.19.0",
        "org.apache.commons:commons-math3:3.6.1",
        "org.apache.hadoop:hadoop-common:3.4.1",
        "org.scala-lang.modules:scala-collection-compat_2.12:2.11.0",
        "org.scala-lang.modules:scala-java8-compat_2.12:0.9.1",
        "org.scala-lang.modules:scala-xml_2.12:2.3.0",
        "org.scala-lang:scala-reflect:2.12.20",

        # Caching and utility libraries
        "com.github.ben-manes.caffeine:caffeine:2.9.3",
        "com.github.blemale:scaffeine_2.12:5.2.1",
        "com.lihaoyi:geny_2.12:0.6.10",
        "com.lihaoyi:mainargs_2.12:0.2.5",
        "com.lihaoyi:os-lib_2.12:0.9.1",
        "com.lihaoyi:sourcecode_2.12:0.3.1",

        # Logging and monitoring
        "com.typesafe.scala-logging:scala-logging_2.12:3.9.5",
        "io.prometheus:simpleclient:0.16.0",
        "io.prometheus:simpleclient_common:0.16.0",
        "org.apache.logging.log4j:log4j-api:2.20.0",
        "org.apache.logging.log4j:log4j-core:2.20.0",
        "org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0",
        "org.slf4j:slf4j-api:2.0.9",

        # JSON parsing (Jackson)
        "com.fasterxml.jackson.core:jackson-core:2.17.2",
        "com.fasterxml.jackson.core:jackson-databind:2.17.2",
        "com.fasterxml.jackson.module:jackson-module-scala_2.12:2.17.2",

        # JSON parsing (ujson and related libraries)
        "com.lihaoyi:ujson_2.12:1.2.0",
        "com.lihaoyi:upack_2.12:1.2.0",
        "com.lihaoyi:upickle-core_2.12:1.2.0",
        "com.lihaoyi:upickle_2.12:1.2.0",

        # Kubernetes client
        "com.squareup.okhttp3:okhttp:4.12.0",
        "io.kubernetes:client-java:19.0.2",
        "io.kubernetes:client-java-api:19.0.2",
        "io.kubernetes:client-java-extended:19.0.2",

        # etcd client (Jetcd - used for distributed coordination)
        "io.etcd:jetcd-core:0.8.2",
        "io.etcd:jetcd-grpc:0.8.2",

        # OpenCensus ZPages (used for observability and debugging)
        "com.lihaoyi:scalatags_2.12:0.13.1",
        "io.opencensus:opencensus-contrib-grpc-metrics:0.31.1",
        "io.opencensus:opencensus-contrib-zpages:0.31.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    # REQUIRED: Pin artifact versions to match internal Databricks compilation environment.
    # Without this, rules_jvm_external resolves transitive dependency conflicts by selecting
    # the latest version, which can cause incompatibilities with components that depend on
    # specific library versions (e.g., Guava for Dicer).
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")
