
package(
    default_visibility = ["//dicer:internal"],
)

package_group(
    name = "internal",
    packages = [
        "//caching/production/tools/...",
        "//dicer/...",
    ],
)

package_group(
    name = "caching",
    packages = [
        "//caching/...",
        "//dicer/...",
    ],
)
